--- a/src/scss/cagov.core.scss
+++ b/src/scss/cagov.core.scss
@@ -100,6 +100,7 @@
 @import "cagov/progress-block.scss";
 @import "cagov/gradient-backgrounds.scss";
 @import "cagov/globals.scss";
+@import "cagov/step-list.scss";
 
 //
 // ORGANIZATION CUSTOM STYLES HERE
