--- a/src/_includes/layouts/navicons.njk
+++ b/src/_includes/layouts/navicons.njk
@@ -39,7 +39,7 @@
 	<div class="container p-b-lg p-t-md">
 		<main class="main-primary" id="main">
      {# Breadcrumbs (rendering data from /src/_data/breadcrumbs.json and /src/_data/helpers.js  #}
-    {% include "../modules/breadcrumbs.njk" %}
+    {% include "../breadcrumbs.njk" %}
 
 			{{ content | safe }}
 
