Renamed badge to tex-highlight and replaced badges with text-highlight class #272

--- a/src/scss/colorscheme/cs-text-accent.scss
+++ b/src/scss/colorscheme/cs-text-accent.scss
@@ -103,3 +103,16 @@
  color: $text-color;
  background-color: $color-p1;
 }
+
+.text-highlight-primary {
+ background-color: $color-s1;
+}
+
+.text-highlight-warning {
+ background-color: lighten($color-p1, 32%);
+}
+
+.text-highlight-dark {
+ color: #fff;
+ background-color: $color-p3;
+}
