--- a/src/_includes/modules/feature-card.html
+++ b/src/_includes/modules/feature-card.html
@@ -1,12 +1,12 @@
 <div class="container">
  <div class="row bg-gray-100">
-  <div class="col-md-4 p-a-md">
+  <div class="col-md-6 col-lg-4 p-a-md order-2 order-md-1">
    <h2 class="h3 m-t-0">Feature Card Title</h2>
    <p>The feature card highlights an action you want people to take or important information on the homepage.
    </p>
    <a href="#" class="btn btn-primary m-b-md">Learn more</a>
   </div>
-  <div class="col-md-8 p-0 text-right">
+  <div class="col-lg-8 col-md-6 p-0 text-right order-1 order-md-2">
    <img src="/images/sample/images/event-big3.jpg" class="img-fluid" alt="Feature Card Example">
   </div>
  </div>
