Added bottom margin to the link-grid items #221

--- a/src/_includes/modules/link-grid.html
+++ b/src/_includes/modules/link-grid.html
@@ -1,13 +1,11 @@
-<dic class="container">
- <div class="row">
-  <div class="col-md-4">
-   <a href="#" class="link-grid">Link 1</a>
-  </div>
-  <div class="col-md-4">
-   <a href="#" class="link-grid">Link 2, showing what longer text looks like</a>
-  </div>
-  <div class="col-md-4">
-   <a href="#" class="link-grid">Link 3</a>
-  </div>
+<div class="row">
+ <div class="col-md-4 mb-4">
+  <a href="javascript:;" class="link-grid">Link 1</a>
  </div>
-</dic>
+ <div class="col-md-4 mb-4">
+  <a href="javascript:;" class="link-grid">Link 2, showing what longer text looks like</a>
+ </div>
+ <div class="col-md-4 mb-4">
+  <a href="javascript:;" class="link-grid">Link 3</a>
+ </div>
+</div>
