Updated feature card image. Updated alert banner content #312

--- a/src/_includes/modules/feature-card.html
+++ b/src/_includes/modules/feature-card.html
@@ -6,8 +6,10 @@
    </p>
    <a href="#" class="btn btn-primary m-b-md">Learn more</a>
   </div>
-  <div class="col-lg-8 col-md-6 p-0 text-right order-1 order-md-2">
-   <img src="/images/sample/images/event-big3.jpg" class="img-fluid" alt="Feature Card Example">
+  <div class="col-lg-8 col-md-6 p-0 text-right order-1 order-md-2 d-flex justify-content-center">
+   <a href="#" class="feature-img" style="background: url('/images/sample/images/event-big3.jpg')"
+    aria-label="Feature card example image">
+   </a>
   </div>
  </div>
 </div>
