--- a/src/scss/cagov.core.scss
+++ b/src/scss/cagov.core.scss
@@ -101,6 +101,7 @@
 @import "cagov/gradient-backgrounds.scss";
 @import "cagov/step-list.scss";
 @import "cagov/link-grid.scss";
+@import "cagov/feature-card.scss";
 @import "cagov/globals.scss";
 
 //
