Fixed gap in main nav #337

--- a/src/scss/cagov/navigation.scss
+++ b/src/scss/cagov/navigation.scss
@@ -158,6 +158,7 @@
    // white-space: nowrap;
    position: relative;
    z-index: 1;
+   height: 100%;
    &:hover,
    &:focus {
     background-color: $gray-50;
@@ -442,11 +443,11 @@
    padding: 20px 0 20px 15px;
    margin-right: 2px;
    margin-left: 2px;
+   text-decoration: none;
    span[class^="ca-gov-icon"]:not(.carrot) {
     @include font-size(1.5);
     display: inline-block;
     vertical-align: -2px;
-    padding-right: 5px;
    }
   }
 
