--- a/src/scss/cagov/type.scss
+++ b/src/scss/cagov/type.scss
@@ -147,6 +147,7 @@ body {
  font-size: $font-size-regular;
  line-height: $line-height-base;
  color: $text-color;
+ overflow-y: scroll;
  @include media-breakpoint-up(sm) {
   font-size: calc(#{$font-size-regular} + #{$ratio});
  }
