updated side navigation scrolling behavior in JS

--- a/src/_includes/layouts/components.njk
+++ b/src/_includes/layouts/components.njk
@@ -7,7 +7,7 @@
     {% include "../breadcrumbs.njk" %}
 
 			<div class="row">
-				<div class="col-md-3">
+				<div class="col-lg-3">
      {# SIde navigation (rendering data from /src/_data/components.json  and /src/_data/helpers.js  #}
 					<nav aria-labelledby="components-list" class="side-navigation sticky-6">
 		   {# Links with subnav #}
@@ -44,7 +44,7 @@
 
 					</nav>
 				</div>
-				<div class="col-md-9 p-b-lg">
+				<div class="col-lg-9 p-b-lg">
 					{{ content | safe }}
 				</div>
 			</div>
