--- a/src/_includes/layouts/templates.njk
+++ b/src/_includes/layouts/templates.njk
@@ -8,7 +8,7 @@
 
 
 			<div class="row">
-				<div class="col-md-3">
+				<div class="col-lg-3">
 
      {# SIde navigation (rendering data from /src/_data/templates.json  and /src/_data/helpers.js  #}
 					<nav aria-labelledby="components-list" class="side-navigation sticky-6">
@@ -42,7 +42,7 @@
 
 
 				</div>
-				<div class="col-md-9 p-b-lg body-content">
+				<div class="col-lg-9 p-b-lg body-content">
 					{{ content | safe }}
 				</div>
 			</div>
