Updated bootstrap breakpoints variables  #379

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -414,10 +414,10 @@ $screen-sm-max: ($screen-md-min - 1); // 991px
 $screen-md-max: ($screen-lg-min - 1); // 1139px
 $screen-lg-max: ($screen-xl-min - 1); // 1279px
 
-// Bootstrap4 breakpoints
-$breakpoint-xm: 540px;
-$breakpoint-sm: 720px;
-$breakpoint-md: 960px;
+// Bootstrap breakpoints
+$breakpoint-xm: 576px;
+$breakpoint-sm: 768px;
+$breakpoint-md: 992px;
 $breakpoint-lg: 1140px;
 $breakpoint-xl: 1176px;
 
