Added new quotation-mark icon to the CaGov font library  #325

--- a/src/scss/cagov/icon-font.scss
+++ b/src/scss/cagov/icon-font.scss
@@ -26,6 +26,9 @@
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
 }
+.ca-gov-icon-quotation-mark:before {
+ content: "\ea29";
+}
 .ca-gov-icon-save:before {
  content: "\ea23";
 }
