--- a/src/scss/colorscheme/colorscheme-mono-import.scss
+++ b/src/scss/colorscheme/colorscheme-mono-import.scss
@@ -36,6 +36,7 @@
 @import "cs-step-list.scss";
 @import "cs-accordion-sidenav.scss";
 @import "cs-link-grid.scss";
+@import "cs-blockquote.scss";
 @import "cs-utility.scss";
 
 @import "cs-high-contrast.scss"; // File should always be last
