--- a/src/_includes/modules/blockquote.html
+++ b/src/_includes/modules/blockquote.html
@@ -1,4 +1,13 @@
 <blockquote>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-    <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+ <p>Good quotes help to tell a story and enhance the credibility of a press release, news story, or speech. Words that
+  are crafted well can leave a lasting impact on the world. </p>
+ <footer>Holly Zuluaga</footer>
+</blockquote>
+
+<p class="lead bold m-b">Without graphic</p>
+
+<blockquote class="no-quotation-mark">
+ <p>Good quotes help to tell a story and enhance the credibility of a press release, news story, or speech. Words that
+  are crafted well can leave a lasting impact on the world. </p>
+ <footer>Holly Zuluaga</footer>
 </blockquote>
