--- a/src/scss/cagov/fixed-header.scss
+++ b/src/scss/cagov/fixed-header.scss
@@ -3,68 +3,72 @@
 ----------------------------------------- */
 
 @media (min-width: $screen-sm-min) {
-    .ask-group.fixed-hide {
-        visibility: hidden;
-        opacity: 0;
-    }
+ .ask-group.fixed-hide {
+  visibility: hidden;
+  opacity: 0;
+ }
 
-    #head-search.fixed-hide:not(.active) {
-        visibility: hidden;
-        opacity: 0;
-        -webkit-transition: all 0.3s;
-        transition: all 0.3s;
-    }
+ #head-search.fixed-hide:not(.active) {
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+ }
 
-    /* full width nav search box in fixed nav*/
-    .full-width-nav #head-search.fixed-hide:not(.active) {
-        visibility: visible;
-        opacity: 1;
-        margin-top: 14px;
+ /* full width nav search box in fixed nav*/
+ .full-width-nav #head-search.fixed-hide:not(.active) {
+  visibility: visible;
+  opacity: 1;
+  margin-top: 14px;
 
-        .search-textfield {
-            height: 44px !important;
-        }
+  .search-textfield {
+   height: 44px !important;
+  }
 
-        .gsc-search-button {
-            height: 44px !important;
-            top: -3px !important;
-        }
-    }
+  .gsc-search-button {
+   height: 44px !important;
+   top: -3px !important;
+  }
+ }
 
-    .no-js {
-        .ask-group.fade {
-            visibility: visible;
-            opacity: 1;
-        }
+ .no-js {
+  .ask-group.fade {
+   visibility: visible;
+   opacity: 1;
+  }
 
-        #head-search.fade {
-            visibility: visible;
-            opacity: 1;
-        }
-    }
+  #head-search.fade {
+   visibility: visible;
+   opacity: 1;
+  }
+ }
 }
 
 .global-header.fixed {
-    transition: all 0.3s ease;
-    position: sticky;
-    top: 0;
-    width: 100%;
-    z-index: 3;
-    @media (min-width: $screen-md-min) {
-        z-index: 7;
-        position: sticky;
-    }
+ transition: all 0.3s ease;
+ position: sticky;
+ top: 0;
+ width: 100%;
+ z-index: 3;
+ @media (min-width: $screen-md-min) {
+  z-index: 7;
+  position: sticky;
+ }
 }
 
 // Beta 5.0 addition
 .fixed + div :target:before {
-    display: block;
-    content: "";
-    height: 140px; // Beta 5.0 addition (gives more space on top of targer)
-    margin: -140px 0 0; // Beta 5.0 addition
+ display: block;
+ content: "";
+ height: 140px; // Beta 5.0 addition (gives more space on top of targer)
+ margin: -140px 0 0; // Beta 5.0 addition
 }
 
 .is-hidden,
 .scrolled {
-    top: -40px !important;
+ top: -40px !important;
+}
+
+h2 {
+ scroll-margin-top: 50px;
 }
