--- a/src/scss/cagov/accordion.scss
+++ b/src/scss/cagov/accordion.scss
@@ -8,7 +8,8 @@
 cagov-accordion details {
  margin-bottom: 0;
  min-height: 3rem;
- margin-top: 0.5rem;
+ margin-top: 1rem;
+ overflow: visible;
 
  summary {
   cursor: pointer;
@@ -77,10 +78,8 @@ cagov-accordion details {
   border: none;
   // top-left | top-right | bottom-right | bottom-left
   border-radius: 0 0 4px 4px;
-  // we use outline instead of border becasue .accordion-body parent's overflow is hidden
-  outline: 1px solid $gray-200;
-  outline-offset: -1px;
-  margin-top: -1px;
+  border: 1px solid $gray-200;
+  border-top: none;
  }
 }
 
@@ -89,7 +88,7 @@ cagov-accordion:defined {
  details {
   transition: height 0.2s;
   height: 3rem;
-  overflow: hidden;
+  overflow: visible;
  }
 
  summary::-webkit-details-marker {
