fixed main navigation border top

--- a/src/scss/cagov/global-header.scss
+++ b/src/scss/cagov/global-header.scss
@@ -55,7 +55,8 @@
   border-bottom: 1px solid $gray-200;
   .section-default {
    &:after {
-    bottom: 56px;
+    bottom: 55px;
+    z-index: 99;
    }
   }
   // Hide mobile controls in desktop view
