--- a/src/_includes/modules/buttons-outline.html
+++ b/src/_includes/modules/buttons-outline.html
@@ -1,28 +1,5 @@
-<p>Outline buttons:</p>
-<div class="btn-row">
-    <a href="" class="btn btn-outline-primary" role="button">.btn-outline-primary</a>
-    <a href="" class="btn btn-outline-standout" role="button">.btn-outline-standout</a>
-    <a href="" class="btn btn-outline-secondary" role="button">.btn-outline-secondary</a>
-</div>
-<p>Use <code>.btn-outline-light</code> for outline button on dark backgrounds. Use <code>.rounded-0</code> class to
-    remove rounded corners.</p>
-<div class="row">
-    <div class="col-md-8">
-        <div class="section-standout p-t p-b-sm p-x">
-            <div class="btn-row">
-                <a href="" class="btn btn-light rounded-0" role="button">.btn-light .rounded-0</a>
-                <a href="" class="btn btn-outline-light" role="button">.btn-outline-light</a>
-                <a href="" class="btn btn-highlight" role="button">.btn-highlight</a>
-                <a href="" class="btn btn-outline-highlight" role="button">.btn-outline-highlight</a>
-            </div>
-        </div>
-    </div>
-</div>
-
-<p class="m-t-md">Add a class <code>.rounded-50</code> to make pill buttons.</p>
-<div class="btn-row">
-    <a href="" class="btn btn-outline-primary rounded-50" role="button">.btn-outline-primary</a>
-    <a href="" class="btn btn-outline-standout rounded-50" role="button">.btn-outline-standout</a>
-    <a href="" class="btn btn-outline-secondary rounded-50" role="button">.btn-outline-secondary</a>
-
+<div class="btn-row p-b">
+ <a href="" class="btn btn-outline-primary" role="button">Primary color</a>
+ <a href="" class="btn btn-outline-highlight" role="button">Highlight color</a>
+ <a href="" class="btn btn-outline-standout" role="button">Standout color</a>
 </div>
