updated template updates page #216

--- a/src/_includes/layouts/components.njk
+++ b/src/_includes/layouts/components.njk
@@ -14,7 +14,7 @@
 
 
 <ul class="list-navigation">
-  <li><a href="/components.html" id="components-list">Available Components</a>
+  <li><a href="/components.html" class="nav-heading" id="components-list">Available Components</a>
   <ul>
   				{% for item in components.components %}
       {% if 'subnav' in item %}
