added tags to icons JSON #341

--- a/src/scss/colorscheme/colorscheme-mono.scss
+++ b/src/scss/colorscheme/colorscheme-mono.scss
@@ -17,7 +17,7 @@ $color-p2:              #545351;        // Grey
 $color-p3:              #191919;        // Dark Grey
 
 // Secondary Theme colors
-$color-s1:              #F4F3EF;        // Lightest Grey
+$color-s1:              #ededef;        // Lightest Grey
 $color-s2:              #d4d4cd;        // Lighter Grey
 $color-s3:              #b3b2ac;        // Light Grey
 
