--- a/src/scss/colorscheme/colorscheme-orangecounty.scss
+++ b/src/scss/colorscheme/colorscheme-orangecounty.scss
@@ -18,7 +18,7 @@ $color-p2:              #A15801;        // Rust
 $color-p3:              #483723;        // Brown
 
 // Secondary Theme colors
-$color-s1:              #f1ede4;        // Lightest tan
+$color-s1:              #fbf0e7;        // Lightest tan
 $color-s2:              #f6e7cc;        // Lighter Tan
 $color-s3:              #f7d7a6;        // Light tan
 
