--- a/src/scss/colorscheme/colorscheme-santabarbara.scss
+++ b/src/scss/colorscheme/colorscheme-santabarbara.scss
@@ -18,7 +18,7 @@ $color-p2: #834B1E; // Rust
 $color-p3: #664945; // Brown Violet
 
 // Secondary Theme colors
-$color-s1: #FFEBD7; // Lightest Gold
+$color-s1: #f8eee4; // Lightest Gold
 $color-s2: #f1dac2; // Lighter Gold
 $color-s3: #e8bd90; // Light Gold
 
