--- a/src/scss/colorscheme/colorscheme-santacruz.scss
+++ b/src/scss/colorscheme/colorscheme-santacruz.scss
@@ -18,7 +18,7 @@ $color-p3: #2c2c4f; // Purple
 // Darker Blue
 
 // Secondary Theme colors
-$color-s1: #E1ECF7; // Lightest Blue
+$color-s1: #eff4fa; // Lightest Blue
 $color-s2: #c7d9ea; // Lighter Blue
 $color-s3: #9bb8d3; // Light Blue $brand-info
 
