--- a/src/scss/colorscheme/colorscheme-shasta.scss
+++ b/src/scss/colorscheme/colorscheme-shasta.scss
@@ -17,7 +17,7 @@ $color-p2:              #336c39;        // Medium green
 $color-p3:              #3c4543;        // Dark green
 
 // Secondary Theme colors
-$color-s1:              #effaf6;        // Lightest green
+$color-s1:              #e4f1e5;        // Lightest green
 $color-s2:              #daefe8;        // Lighter green
 $color-s3:              #a1cca1;        // Light green
 
