--- a/src/scss/colorscheme/colorscheme-sierra.scss
+++ b/src/scss/colorscheme/colorscheme-sierra.scss
@@ -17,7 +17,7 @@ $color-p2:              #447766;        // Medium green
 $color-p3:              #194949;        // Dark green
 
 // Secondary Theme colors
-$color-s1:              #effaf6;        // Lightest green
+$color-s1:              #e8f1ee;        // Lightest green
 $color-s2:              #daefe8;        // Lighter green
 $color-s3:              #a1cca1;        // Light green
 
