--- a/src/scss/colorscheme/colorscheme-trinity.scss
+++ b/src/scss/colorscheme/colorscheme-trinity.scss
@@ -17,7 +17,7 @@ $color-p2:              #446A7C;        // Navy Blue
 $color-p3:              #21272A;        // Darker Grey
 
 // Secondary Theme colors
-$color-s1:              #f9f8f8;        // Lightest Grey
+$color-s1:              #eff5f8;        // Lightest Grey
 $color-s2:              #e2dfda;        // Lighter Grey
 $color-s3:              #ccc8bf;        // Light Grey
 
