--- a/src/scss/colorscheme/cs-utility.scss
+++ b/src/scss/colorscheme/cs-utility.scss
@@ -4,7 +4,7 @@
 ----------------------------------------- */
 
 .utility-header {
- background: $gray-50;
+ background: $color-s1;
  color: $black;
 
  .social-media-links {
