--- a/src/scss/colorscheme/colorscheme-oceanside.scss
+++ b/src/scss/colorscheme/colorscheme-oceanside.scss
@@ -13,7 +13,7 @@ $color-p2:              #046B99;     // Medium Blue
 $color-p3:              #323A45;     // Dark Blue
 
 // Secondary Theme colors
-$color-s1:              #E1F2F7;            // Lightest Blue
+$color-s1:              #eef8fb;            // Lightest Blue
 $color-s2:              #9FDBF1;            // Lighter Blue
 $color-s3:              #50aee4;        	// Light Blue $brand-info
 
