Added general license file and fixed icons css typos

--- a/src/scss/cagov/icon-font.scss
+++ b/src/scss/cagov/icon-font.scss
@@ -98,7 +98,7 @@
 .ca-gov-icon-air:before {
  content: "\e9de";
 }
-.ca-gov-icon-air-polution:before {
+.ca-gov-icon-air-pollution:before {
  content: "\e9df";
 }
 .ca-gov-icon-air-quality:before {
@@ -188,7 +188,7 @@
 .ca-gov-icon-audio:before {
  content: "\e63a";
 }
-.ca-gov-icon-baloons:before {
+.ca-gov-icon-balloons:before {
  content: "\e9ac";
 }
 .ca-gov-icon-badminton:before {
@@ -206,7 +206,7 @@
 .ca-gov-icon-bars-upward:before {
  content: "\ea1d";
 }
-.ca-gov-icon-baseballl:before {
+.ca-gov-icon-baseball:before {
  content: "\e9e3";
 }
 .ca-gov-icon-basketball:before {
@@ -488,7 +488,7 @@
 .ca-gov-icon-code:before {
  content: "\e91c";
 }
-.ca-gov-icon-cofee:before {
+.ca-gov-icon-coffee:before {
  content: "\e9b7";
 }
 .ca-gov-icon-collapse-all:before {
@@ -542,7 +542,7 @@
 .ca-gov-icon-desktop-video-module:before {
  content: "\ea10";
 }
-.ca-gov-icon-dices:before {
+.ca-gov-icon-dice:before {
  content: "\e9b9";
 }
 .ca-gov-icon-digging:before {
@@ -803,7 +803,7 @@
 .ca-gov-icon-hand-money:before {
  content: "\e939";
 }
-.ca-gov-icon-hand-watter:before {
+.ca-gov-icon-hand-water:before {
  content: "\e99b";
 }
 .ca-gov-icon-handshake:before {
@@ -914,7 +914,7 @@
 .ca-gov-icon-logo:before {
  content: "\e600";
 }
-.ca-gov-icon-loud-speaker:before {
+.ca-gov-icon-megaphone:before {
  content: "\e639";
 }
 .ca-gov-icon-magnify-glass:before {
@@ -1232,7 +1232,7 @@
 .ca-gov-icon-share:before {
  content: "\e615";
 }
-.ca-gov-icon-share-Instagram:before {
+.ca-gov-icon-share-instagram:before {
  content: "\e9f9";
 }
 .ca-gov-icon-share-button:before {
