--- a/src/_includes/modules/card-image.html
+++ b/src/_includes/modules/card-image.html
@@ -1,7 +1,7 @@
 <div class="card">
  <img class="card-img" src="/images/sample/images/placeholder/207x136.gif" alt="Card image size">
  <div class="card-body bg-gray-50">
-  <h3 class="card-title"><a href="#">Card title</a></h3>
-  <p>This is short card description that goes after card title.</p>
+  <h3 class="card-title"><a href="#">Give your card a short title</a></h3>
+  <p>Use this space to briefly tell your reader what they will find at the card's destination</p>
  </div>
 </div>
