--- a/src/_includes/modules/nav-dropdown.html
+++ b/src/_includes/modules/nav-dropdown.html
@@ -57,7 +57,7 @@
       <a href="/components.html" class="second-level-link">Components</a>
      </li>
      <li class="unit1">
-      <a href="/structure/navsamples.html" class="second-level-link">Navigation</a>
+      <a href="/structure/site-navigation.html" class="second-level-link">Navigation</a>
      </li>
      <li class="unit1">
       <a href="/css-shortcuts/css-units.html" class="second-level-link">CSS shortcuts</a>
