--- a/src/_includes/modules/accordion.html
+++ b/src/_includes/modules/accordion.html
@@ -23,7 +23,7 @@
 </cagov-accordion>
 <cagov-accordion>
  <details>
-  <summary>This heading tells users what’s inside the accordion</summary>
+  <summary>This heading tells users what's inside the accordion</summary>
   <div class="accordion-body">
    <p>Once open, the content within the accordion should describe the topic in more detail. It should not repeat the
     heading.</p>
