updated patterns side navigation #223

--- a/src/_includes/layouts/patterns.njk
+++ b/src/_includes/layouts/patterns.njk
@@ -15,7 +15,7 @@
 		   {# Links with subnav #}
 
 <ul class="list-navigation">
-  <li><a href="/patterns.html" class="nav-heading" id="components-list">Content Patterns</a>
+  <li><a href="/patterns.html" class="nav-heading" id="components-list">Patterns</a>
   <ul>
   				{% for item in patterns.patterns %}
       {% if 'subnav' in item %}
