updated tab component #413

--- a/src/_includes/modules/tabs.html
+++ b/src/_includes/modules/tabs.html
@@ -1,32 +1,32 @@
 <div class="tabs">
-    <ul>
-        <li>
-            <a href="#section1">Section 1</a>
-        </li>
-        <li>
-            <a href="#section2">Section 2</a>
-        </li>
-        <li>
-            <a href="#section3">Section 3</a>
-        </li>
-        <li>
-            <a href="#section4">Section 4</a>
-        </li>
-    </ul>
-    <section id="section1">
-        <h3 class="m-t-0">Section 1</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod, tortor nec pharetra ultricies, ante erat imperdiet velit, nec laoreet enim lacus a velit. <a href="#">Nam luctus</a>, enim in interdum condimentum, nisl diam iaculis lorem, vel volutpat mi leo sit amet lectus. Praesent non odio bibendum magna bibendum accumsan.</p>
-    </section>
-    <section id="section2">
-        <h3 class="m-t-0">Section 2</h3>
-        <p>Nullam at diam nec arcu suscipit auctor non a erat. Sed et magna semper, eleifend magna non, facilisis nisl. Proin et est et lorem dictum finibus ut nec turpis. Aenean nisi tortor, euismod a mauris a, mattis scelerisque tortor. Sed dolor risus, varius a nibh id, condimentum lacinia est. In lacinia cursus odio a aliquam. Curabitur tortor magna, laoreet ut rhoncus at, sodales consequat tellus.</p>
-    </section>
-    <section id="section3">
-        <h3 class="m-t-0">Section 3</h3>
-        <p>Phasellus ac tristique orci. Nulla maximus <a href="">justo nec dignissim consequat</a>. Sed vehicula diam sit amet mi efficitur vehicula in in nisl. Aliquam erat volutpat. Suspendisse lorem turpis, accumsan consequat consectetur gravida, <a href="#">pellentesque ac ante</a>. Aliquam in commodo ligula, sit amet mollis neque. Vestibulum at facilisis massa.</p>
-    </section>
-    <section id="section4">
-        <h3 class="m-t-0">Section 4</h3>
-        <p>Nam luctus, enim in interdum condimentum, nisl diam iaculis lorem, vel volutpat mi leo sit amet lectus. Praesent non odio bibendum magna bibendum accumsan. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod, tortor nec pharetra ultricies, ante erat imperdiet velit, nec laoreet enim lacus a velit. </p>
-    </section>
+ <ul>
+  <li>
+   <a href="#section1">Tab 1</a>
+  </li>
+  <li>
+   <a href="#section2">Tab 2</a>
+  </li>
+  <li>
+   <a href="#section3">Tab 3</a>
+  </li>
+  <li>
+   <a href="#section4">Tab 4</a>
+  </li>
+ </ul>
+ <section id="section1">
+  <h3 class="m-t-0">Tab 1 headline</h3>
+  <p>This is tab 1 body text.</p>
+ </section>
+ <section id="section2">
+  <h3 class="m-t-0">Tab 2 headline</h3>
+  <p>This is tab 2 body text.</p>
+ </section>
+ <section id="section3">
+  <h3 class="m-t-0">Tab 3 headline</h3>
+  <p>This is tab 3 body text.</p>
+ </section>
+ <section id="section4">
+  <h3 class="m-t-0">Tab 4 headline</h3>
+  <p>This is tab 3 body text.</p>
+ </section>
 </div>
